--- a/404.html
+++ b/404.html
@@ -1,14 +1,23 @@
 ---
-layout: page
+layout: default
 title: Page Not Found
+description: Sorry – the page your looking for doesn't exist.
+featured_image: /images/demo/about.jpg
 ---
-<section class="page-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">404 - Page Not Found</h2>
-        <h3 class="section-subheading text-muted">The requested page could not be found.</h3>
-      </div>
-    </div>
-  </div>
+
+<section class="hero">
+
+	<div class="hero__image" style="background-image: url({{ page.featured_image }})">
+		<div class="hero__overlay"></div>
+	</div>
+
+	<div class="wrap">
+
+		<h1>Page not found.</h1>
+		<p class="hero__text editable">Sorry – the page your looking for doesn't exist.</p>
+		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
+		<p><a href="/" class="button button--large">Back To Home</a></p>
+
+	</div>
+
 </section>
