--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A sleek, modern Jekyll theme for personal websites.
-description: A sleek, modern Jekyll theme for personal websites. Personal is the perfect theme for developers, designers and other creatives.
+title: Thatcher Imaging
+description: Photography and color science services.
 featured_image: /images/demo/home.jpg
 ---
 
@@ -13,9 +13,8 @@ featured_image: /images/demo/home.jpg
 
 	<div class="wrap">
 
-		<h1>A sleek, modern Jekyll theme
-		for personal websites</h1>
-		<p>Personal is the perfect theme for developers, designers and other creatives.</p>
+		<h1>Photography and color science services.</h1>
+		<p>Color tool development and pipeline consultation.</p>
 
 		{% include socials.html %}
 
