--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Thatcher Imaging
-description: Photography and color science services.
+description: Color science and tools services.
 featured_image: /images/demo/home.jpg
 ---
 
@@ -13,7 +13,7 @@ featured_image: /images/demo/home.jpg
 
 	<div class="wrap">
 
-		<h1>Photography and color science services.</h1>
+		<h1>Color science and tools services.</h1>
 		<p>Color tool development and pipeline consultation.</p>
 
 		{% include socials.html %}
