updated about us page

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Projects
-description: Currently in development
+description: Ongoing work at Thatcher Imaging
 featured_image: /images/demo/home.jpg
 ---
 
@@ -14,7 +14,7 @@ featured_image: /images/demo/home.jpg
 	<div class="wrap">
 
 		<h1>Projects</h1>
-		<p>Previous work from Thatcher Imaging</p>
+		<p>Ongoing work from Thatcher Imaging</p>
 
 	</div>
 
